Feat: Added sidebar colors

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -12,7 +12,7 @@ headingFont = "monospace"                 # Heading font family
 headingFontSizes = ["2.5rem"]
 baseRadius = "8px"                        # Rounded corners on buttons and widgets
 dataframeBorderColor = "#acc8fcff"      # Border for data frames
-borderColor = "#66c2a5"               # General borders
+borderColor = "#66c2a5"                 # General borders
 chartCategoricalColors = ["#66c2a5", "#fc8d62", "#8da0cb", "#e78ac3", "#a6d854", "#ffd92f"]     # Plotly Pastel2 colors
 chartSequentialColors = ["#4CAF50", "#8BC34A", "#CDDC39", "#FFEB3B", "#FFC107", "#FF9800", "#F44336", "#FF5722", "#E91E63", "#9C27B0"]      # Based on Seaborn Spectral colors
 
@@ -20,4 +20,5 @@ chartSequentialColors = ["#4CAF50", "#8BC34A", "#CDDC39", "#FFEB3B", "#FFC107", 
 backgroundColor = "#f0f0ec"
 headingFontSizes = "15px"
 headingFont = "monospace"
+fontSize = "0.9rem"
 linkColor = "#666357"
